11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
11/1/2011 Changed PropertyCheckBox to use actionPerformed instead of ChangeListener to suppress multiple event notifications, see #3136
10/31/11 Changed events from "message" to "object" + "action", see #3136
10/30/11 Only try to load machine cookie if sim-sharing is enabled, see #3136
10/30/11 Replaced usages of SimSharingEvents.addPropertyListener with SimSharingProperty and removed SimSharingEvents.addPropertyListener, see #3136
10/30/11 Store a cookie on the user's machine to identify when the same machine is using different sims, see #3136
10/30/11 Added a message when the reset all confirmation dialog is shown and accepted/cancelled, see #3136
10/30/11 Fixed: Reset all sends a message even when cancel is pressed, see #3136
10/30/11 Added messages for frame activated/deactivated, iconified/deiconified, see #3136
10/30/11 Added a message for sim exit, work for both frame closing and File->Exit (but not application kill)
10/28/11 Added a way to identify if the student is running the sim in data reporting mode, see #3136
10/28/11 Added messages for sim name, version etc. on sim startup
10/27/11 Added message when active module changes
10/27/11 Moved sim start time tracking to PhetApplicationLauncher
10/24/11 Moved ItemList.foldLeft to ObservableList
10/18/11 Added JME-related strings
10/11/11 add ISimInfo.hasCommonLineArg
10/4/11 Moved ColorDialogMenuItem to common as recommended in #3090
9/23/11 #3046, rename ImmutableVector2D.createPolar
9/9/11 Added ValueEquals.or
9/6/11 Added classes to support simsharing
9/6/11 Added ImmutableVector2D.toDimension
8/30/11 Added convenience ImmutableVector2D methods to DoubleGeneralPath
8/24/11 added PhetPCanvas.addBoundsNode(Dimension2D) for debugging transform strategies, especially useful with CenteredStage