@@ -6,12 +6,17 @@ import java.util.StringTokenizer;
 
 /**
  * Standardizes the rules for formatting action parameters, so that we can also standardize on a parser.
+ * Parameters cannot contain the tab character \t because it is used as a delimiter in the parser.
  *
  * @author Sam Reid
  */
 public class Parameter {
     public final String name;
     public final String value;
+
+    //Delimiter between parameter items in a list of parameters, used by the text generator and the parser
+    //We use Tab instead of comma since it is much less common in string representation of objects
+    public static final String DELIMITER = "\t";
 
     public Parameter( String name, boolean value ) {
         this( name, value + "" );
@@ -52,7 +57,7 @@ public class Parameter {
 
     //Parses a String into a list of parameters, used by the post-processor
     public static Parameter[] parseParameters( String line ) {
-        StringTokenizer st = new StringTokenizer( line, "," );
+        StringTokenizer st = new StringTokenizer( line, DELIMITER );
         ArrayList<Parameter> parameters = new ArrayList<Parameter>();
         while ( st.hasMoreTokens() ) {
             parameters.add( parseParameter( st.nextToken() ) );
