@@ -88,8 +88,7 @@ public class JavaPostProcessor extends Processor {
 
     public static void main( String[] args ) throws IOException {
         new JavaPostProcessor().process(
-                new File( "C:\\Users\\Sam\\Desktop\\biglog4.txt" ),
-                new File( "C:\\Users\\Sam\\Desktop\\biglog5.txt" ),
-                new File( "C:\\Users\\Sam\\Desktop\\biglog6.txt" ) );
+                new File( "C:\\Users\\Sam\\Desktop\\tablog-1.txt" )
+        );
     }
 }
